# ps3recomp

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  requirements.txt
.claude/: settings.local.json
config/: example.toml
docs/: ARCHITECTURE.md  BUILDING.md  CUSTOM_MODULES.md  FAQ.md  GAME_PORTING_GUIDE.md  GETTING_STARTED.md  MODULES_REFERENCE.md  MODULE_STATUS.md  NID_SYSTEM.md  PLATFORM_ABSTRACTION.md  RSX_GRAPHICS.md  RUNTIME.md  SYSCALLS.md  TOOLS.md
include/ps3emu/: endian.h  error_codes.h  module.h  nid.h  ps3types.h
libs/audio/: cellAudio.c  cellAudio.h  cellMic.c  cellMic.h  cellVoice.c  cellVoice.h
libs/codec/: cellAdec.c  cellAdec.h  cellAdecAtrac3p.c  cellAdecAtrac3p.h  cellAdecCelp8.c  cellAdecCelp8.h  cellDmux.c  cellDmux.h  cellGifDec.c  cellGifDec.h  cellJpgDec.c  cellJpgDec.h  cellJpgEnc.c  cellJpgEnc.h  cellPamf.c  cellPamf.h  cellPngDec.c  cellPngDec.h  cellPngEnc.c  cellPngEnc.h  cellSail.c  cellSail.h  cellVdec.c  cellVdec.h  cellVdecDivx.c  cellVdecDivx.h  cellVpost.c  cellVpost.h
libs/filesystem/: cellFs.c  cellFs.h  cellFsUtility.c  cellFsUtility.h
libs/font/: cellFont.c  cellFont.h  cellFontFT.c  cellFontFT.h  cellFreeType.c  cellFreeType.h  cellL10n.c  cellL10n.h
libs/hardware/: cellCamera.c  cellCamera.h  cellGem.c  cellGem.h  cellUsbd.c  cellUsbd.h
libs/input/: cellKb.c  cellKb.h  cellMouse.c  cellMouse.h  cellPad.c  cellPad.h
libs/misc/: cellAvconfExt.c  cellAvconfExt.h  cellBGDL.c  cellBGDL.h  cellGameExec.c  cellGameExec.h  cellGameRecording.c  cellGameRecording.h  cellImeJp.c  cellImeJp.h  cellKey2char.c  cellKey2char.h  cellLicenseArea.c  cellLicenseArea.h  cellMusicDecode.c  cellMusicDecode.h  cellMusicDecode2.c  cellMusicDecode2.h  cellMusicExport.c  cellMusicExport.h  cellOskDialog.c  cellOskDialog.h  cellOvis.c  cellOvis.h  cellPhotoExport.c  cellPhotoExport.h  cellPhotoImport.c  cellPhotoImport.h  cellPrint.c  cellPrint.h  cellRemotePlay.c  cellRemotePlay.h  cellScreenshot.c  cellScreenshot.h  cellSheap.c  cellSheap.h  cellSubdisplay.c  cellSubdisplay.h  cellVideoExport.c  cellVideoExport.h  (+2 more)
libs/network/: cellHttp.c  cellHttp.h  cellHttpUtil.c  cellHttpUtil.h  cellHttps.c  cellHttps.h  cellNet.c  cellNet.h  cellNetCtl.c  cellNetCtl.h  cellRudp.c  cellRudp.h  cellSsl.c  cellSsl.h  sceNp.c  sceNp.h  sceNpBasic.c  sceNpBasic.h  sceNpClans.c  sceNpClans.h  sceNpCommerce.c  sceNpCommerce.h  sceNpCommerce2.c  sceNpCommerce2.h  sceNpMatching2.c  sceNpMatching2.h  sceNpSignaling.c  sceNpSignaling.h  sceNpSns.c  sceNpSns.h  sceNpTrophy.c  sceNpTrophy.h  sceNpTus.c  sceNpTus.h  sceNpUtil.c  sceNpUtil.h  sysNet.c  sysNet.h
libs/spurs/: cellDaisy.c  cellDaisy.h  cellFiber.c  cellFiber.h  cellSpurs.c  cellSpurs.h  cellSpursJq.c  cellSpursJq.h
libs/sync/: cellSync.c  cellSync.h  cellSync2.c  cellSync2.h
libs/system/: cellGame.c  cellGame.h  cellMsgDialog.c  cellMsgDialog.h  cellRtc.c  cellRtc.h  cellSaveData.c  cellSaveData.h  cellSysmodule.c  cellSysmodule.h  cellSysutil.c  cellSysutil.h  cellSysutilNpEula.c  cellSysutilNpEula.h  cellUserInfo.c  cellUserInfo.h  sysPrxForUser.c  sysPrxForUser.h  sys_interrupt.c  sys_interrupt.h
libs/video/: cellGcmSys.c  cellGcmSys.h  cellResc.c  cellResc.h  cellVideoOut.c  cellVideoOut.h  rsx_commands.c  rsx_commands.h  rsx_d3d12_backend.c  rsx_d3d12_backend.h  rsx_d3d12_shaders.h  rsx_null_backend.c  rsx_null_backend.h  rsx_primitives.h  rsx_texture_formats.h  rsx_vertex_formats.h
runtime/memory/: vm.h
runtime/ppu/: ppu_context.h  ppu_memory.h  ppu_ops.h
runtime/spu/: spu_context.h  spu_dma.h
runtime/syscalls/: lv2_register.c  lv2_syscall_table.h  sys_cond.c  sys_cond.h  sys_event.c  sys_event.h  sys_fs.c  sys_fs.h  sys_memory.c  sys_memory.h  sys_mutex.c  sys_mutex.h  sys_ppu_thread.c  sys_ppu_thread.h  sys_rwlock.c  sys_rwlock.h  sys_semaphore.c  sys_semaphore.h  sys_timer.c  sys_timer.h
templates/project/: CMakeLists.txt  config.toml  main.cpp  stubs.cpp
tools/: elf_parser.py  find_functions.py  generate_stubs.py  nid_database.py  ppu_disasm.py  ppu_lifter.py  prx_analyzer.py  requirements.txt  spu_disasm.py
